# SUTMS

./: .env  .env.example  .gitignore  .replit  README.md  animated_progress.py  create_kaggle_json.sh  docker-compose.yml  generate_test_plate.py  optimized_ocr.py  project_structure.md  pubspec.yaml  pyproject.toml  replit.nix  simple_ocr_test.py  test_camera_api.py  test_camera_integration.py  test_ocr_api.py  traffic_camera.py
backend/: Dockerfile  (+9 more)
extracted/NepaliPlateRecognition/: .replit  django_server.sh  main.py  pyproject.toml  replit.nix  run_django.py  run_django_server.sh
extracted/NepaliPlateRecognition/attached_assets/: Pasted--Smart-Urban-Traffic-Management-System-SUTMS-An-AI-enhanced-violation-tracking-system-capable-of-1743808462416.txt  Pasted-1-4-Aim-and-objective-1-4-1-Aim-This-research-aims-to-design-an-intelligent-traffic-management-sys-1743811713070.txt
extracted/NepaliPlateRecognition/sutms_django/: init_data.py
extracted/NepaliPlateRecognition/sutms_django/accounts/: models.py
extracted/NepaliPlateRecognition/sutms_django/api/: serializers.py
extracted/NepaliPlateRecognition/sutms_django/ocr/: __init__.py  admin.py  api.py  apps.py  models.py  nepali_ocr.py  signals.py  views.py
extracted/NepaliPlateRecognition/sutms_django/payments/: models.py
extracted/NepaliPlateRecognition/sutms_django/routing/: urls.py
extracted/NepaliPlateRecognition/sutms_django/sutms/: __init__.py  settings.py  urls.py  wsgi.py
extracted/NepaliPlateRecognition/sutms_django/tracking/: consumers.py  views.py
extracted/NepaliPlateRecognition/sutms_django/training/: models.py
extracted/NepaliPlateRecognition/sutms_django/vehicles/: models.py  urls.py
extracted/NepaliPlateRecognition/sutms_django/violations/: views.py
extracted/NepaliPlateRecognition/sutms_flutter/: README.md  pubspec.yaml
(+347 files in other folders)
